# el-calc

./: README.md  app.js  calculator.js  index.html  package-lock.json  package.json  preload.js  styles.css
cpp-libs/: CMakeLists.txt
cpp-libs/Calc-cpp-ffi/: CMakeLists.txt  calc.cpp  calc.h
